# BalatrautoC

./: CMakeLists.txt  LICENSE  README.md
Balatrauto C++/: Balatrauto C++.cpp  Balatrauto C++.h  CMakeLists.txt
src/: data.hpp  main.cpp  profile.cpp  profile.hpp
